@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3239 2003/09/04 13:03:19 xtraeme Exp $
+$NetBSD: CHANGES,v 1.3240 2003/09/04 13:07:56 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3528,3 +3528,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated fping6 to 2.4b2nb1 [abs 2003-09-04]
 	Updated gaim to 0.68 [jmmv 2003-09-04]
 	Updated gq to 0.6.0 [xtraeme 2003-09-04]
+	Updated exim-exiscan to 4.22-12 [abs 2003-09-04]
